{
  "version": 4,
  "terraform_version": "1.6.5",
  "serial": 64,
  "lineage": "f3b7cd61-0799-a090-c4fe-c776f584004a",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "terra_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08aed4557c45df42e",
            "associate_with_private_ip": "10.0.1.67",
            "association_id": "eipassoc-021a66a4899deb914",
            "domain": "vpc",
            "id": "eipalloc-08aed4557c45df42e",
            "instance": "i-03ccb44336733524d",
            "network_border_group": "eu-west-2",
            "network_interface": "eni-02f6746ad171922de",
            "private_dns": "ip-10-0-1-67.eu-west-2.compute.internal",
            "private_ip": "10.0.1.67",
            "public_dns": "ec2-52-56-223-235.eu-west-2.compute.amazonaws.com",
            "public_ip": "52.56.223.235",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_instance.terra_ec2",
            "aws_internet_gateway.terra_IGW",
            "aws_network_interface.terra_net_interface",
            "aws_security_group.terra_SG",
            "aws_subnet.terra_subnet",
            "aws_vpc.terra_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "terra_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-093cb9fb2d34920ad",
            "arn": "arn:aws:ec2:eu-west-2:289149064998:instance/i-03ccb44336733524d",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-03ccb44336733524d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "uk-london-kp",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-02f6746ad171922de"
              }
            ],
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-02f6746ad171922de",
            "private_dns": "ip-10-0-1-67.eu-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.67",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-08f8efceca095b629",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-090ca15d9dc674bfa",
            "tags": {
              "name": "web_server"
            },
            "tags_all": {
              "name": "web_server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0115c4dc10aa6dd6f"
            ]
          },
          "dependencies": [
            "aws_network_interface.terra_net_interface",
            "aws_security_group.terra_SG",
            "aws_subnet.terra_subnet",
            "aws_vpc.terra_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "terra_IGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:289149064998:internet-gateway/igw-0064ca723cbfa16ac",
            "id": "igw-0064ca723cbfa16ac",
            "owner_id": "289149064998",
            "tags": {
              "name": "my_IGW"
            },
            "tags_all": {
              "name": "my_IGW"
            },
            "vpc_id": "vpc-0c5fd737685bf468c"
          },
          "dependencies": [
            "aws_vpc.terra_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "terra_net_interface",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:289149064998:network-interface/eni-02f6746ad171922de",
            "id": "eni-02f6746ad171922de",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "06:4c:92:97:a3:93",
            "owner_id": "289149064998",
            "private_ip": "10.0.1.67",
            "private_ip_list": [
              "10.0.1.67"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.0.1.67"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0115c4dc10aa6dd6f"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-090ca15d9dc674bfa"
          },
          "dependencies": [
            "aws_security_group.terra_SG",
            "aws_subnet.terra_subnet",
            "aws_vpc.terra_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "terra_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0064ca723cbfa16ac",
            "id": "r-rtb-051f1bba4e64cf07c1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-051f1bba4e64cf07c",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.terra_IGW",
            "aws_route_table.terra_route_table",
            "aws_vpc.terra_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "terra_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:289149064998:route-table/rtb-051f1bba4e64cf07c",
            "id": "rtb-051f1bba4e64cf07c",
            "owner_id": "289149064998",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "name": "my_route_table"
            },
            "tags_all": {
              "name": "my_route_table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c5fd737685bf468c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.terra_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "terra_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cb0617bfe75c8d5c",
            "route_table_id": "rtb-051f1bba4e64cf07c",
            "subnet_id": "subnet-090ca15d9dc674bfa"
          },
          "dependencies": [
            "aws_route_table.terra_route_table",
            "aws_subnet.terra_subnet",
            "aws_vpc.terra_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "terra_SG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:289149064998:security-group/sg-0115c4dc10aa6dd6f",
            "description": "security group for the EC2 instance",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Outbound traffic rule",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0115c4dc10aa6dd6f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0",
                  "10.0.0.0/16"
                ],
                "description": "http traffic",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0",
                  "10.0.0.0/16"
                ],
                "description": "https traffic",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0",
                  "10.0.0.0/16"
                ],
                "description": "ssh",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "sec_group",
            "name_prefix": "",
            "owner_id": "289149064998",
            "revoke_rules_on_delete": false,
            "tags": {
              "name": "allow_web"
            },
            "tags_all": {
              "name": "allow_web"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c5fd737685bf468c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.terra_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "terra_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:289149064998:subnet/subnet-090ca15d9dc674bfa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-090ca15d9dc674bfa",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "289149064998",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "name": "my_subnet"
            },
            "tags_all": {
              "name": "my_subnet"
            },
            "vpc_id": "vpc-0c5fd737685bf468c"
          },
          "dependencies": [
            "aws_vpc.terra_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "terra_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:289149064998:vpc/vpc-0c5fd737685bf468c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-064a827f47d1a5baa",
            "default_route_table_id": "rtb-0aea288d2c39aa126",
            "default_security_group_id": "sg-0ef723afd7ab02e43",
            "dhcp_options_id": "dopt-04e97e2331e81be89",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0c5fd737685bf468c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0aea288d2c39aa126",
            "owner_id": "289149064998",
            "tags": {
              "name": "my_vpc"
            },
            "tags_all": {
              "name": "my_vpc"
            }
          }
        }
      ]
    }
  ]
}